layout bugs on mobile

--- a/Wikipedia-viewer/styles.css
+++ b/Wikipedia-viewer/styles.css
@@ -9,6 +9,10 @@ body{
   margin-left:20%;
 }*/
 
+h1{
+  margin-top: 10%;
+}
+
 .input-field{
   width: 70%;
   margin: auto;
